@@ -1,4 +1,5 @@
 0.4.2 - currently working on
+- [#2183] Fix: tx_oelib_templatehelper::init() differs from tx_seminars_templatehelper()
 - [#2178] Feature: Add methods hideSubpartsArray and unhideSubpartsArray to tx_oelib_templatehelper
 - [#2179] Fix: Unit test failure: tx_oelib_templatehelperchild_testcase::testEnableFieldsCanBeDifferentForDifferentVersionParameters
 - [#2161] Fix: Oelib produces SQL error in User -> Workspace
